<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_events"
        android:icon="@drawable/ic_event_black_24dp"
        android:title="@string/title_events" />

    <item
        android:id="@+id/navigation_info"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/title_info" />

    <!--<item-->
        <!--android:id="@+id/navigation_contact"-->
        <!--android:icon="@drawable/ic_people_black_24dp"-->
        <!--android:title="@string/title_contact" />-->

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_settings" />

</menu>
