<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_event_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list"
            android:name="de.schiewe.volker.bgjugend2016.Fragments.EventFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="LinearLayoutManager"
            tools:context=".fragments.EventListFragment"
            tools:listitem="@layout/item_event" />

        <ProgressBar
            android:id="@+id/event_list_progress"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:visibility="visible"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/filter_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:src="@drawable/ic_filter_black_24dp"
            app:fabSize="normal" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>
